--- a/styles/style.css
+++ b/styles/style.css
@@ -5,3 +5,30 @@ h1 {
 p {
     font-family: 'Lexend Deca', sans-serif;
 }
+
+.column {
+    float: left;
+    width: 33.33%;
+}
+
+.column-first {
+    background-color: hsl(31, 77%, 52%);
+}
+
+.column-second {
+    background-color: hsl(184, 100%, 22%);
+}
+
+.column-third {
+    background-color: hsl(179, 100%, 13%);
+}
+
+.row {
+    padding: 3rem;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
