--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,11 @@
 h1 {
-    font-family: 'Big Shoulders Display', cursive; 
+    font-family: 'Big Shoulders Display', cursive;
+    color: hsl(0, 0%, 95%); 
 }
 
 p {
     font-family: 'Lexend Deca', sans-serif;
+    color: hsla(0, 0%, 100%, 0.75);
 }
 
 .column {
