--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,8 @@ p {
 
 .column-first {
     background-color: hsl(31, 77%, 52%);
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
 }
 
 .column-second {
@@ -24,6 +26,8 @@ p {
 
 .column-third {
     background-color: hsl(179, 100%, 13%);
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 
 .row {
