--- a/styles/style.css
+++ b/styles/style.css
@@ -82,7 +82,7 @@ p {
     color: hsl(179, 100%, 13%);
 }
 
-@media screen and (max-width: 375px){
+@media screen and (max-width: 414px){
     .column {
         width: 70%;
     }
@@ -102,5 +102,28 @@ p {
     .row {
         margin-top: 5%;
         margin-left: 0;
+    }
+}
+
+@media screen and (min-width: 768px){
+    .column {
+        width: 60%;
+    }
+
+    .column-first {
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+        border-bottom-left-radius: 0;
+    }
+
+    .column-third {
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
+    }
+
+    .row {
+        margin-top: 5%;
+        margin-left: 15%;
     }
 }
