--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@ p {
     }
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) and (max-width: 1440px) {
     .column {
         width: 60%;
     }
